<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".makeOrderActivity">


    <TextView
        android:id="@+id/textViewGreetings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/greetings"
        android:textAlignment="center"
        android:textColor="#A227B0"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/drinks"

        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <RadioGroup
        android:id="@+id/drinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textViewAdditives"
        app:layout_constraintTop_toBottomOf="@+id/textViewGreetings">

        <RadioButton
            android:id="@+id/radioButtonTea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/radioButtonTeaText"
            android:textColor="#A227B0" />

        <RadioButton
            android:id="@+id/radioButtonCoffe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/radioButtonCoffeText"
            android:textColor="#A227B0" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewAdditives"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/textViewAdditivesText"
        android:textAlignment="center"
        android:textColor="#A227B0"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxMilk"
        app:layout_constraintTop_toBottomOf="@+id/drinks"
        tools:layout_editor_absoluteX="16dp" />

    <CheckBox
        android:id="@+id/checkBoxSugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxSugar"
        android:textColor="#A227B0"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxMilk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAdditives"
        app:layout_constraintTop_toTopOf="@+id/checkBoxMilk"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxMilk"/>

    <CheckBox
        android:id="@+id/checkBoxMilk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CheckBoxMilk"
        android:textColor="#A227B0"
        app:layout_constraintBottom_toTopOf="@+id/textViewDrinkType"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxLemon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkBoxSugar"
        app:layout_constraintTop_toBottomOf="@+id/textViewAdditives" />

    <CheckBox
        android:id="@+id/checkBoxLemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxLemon"
        android:textColor="#A227B0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBoxMilk"
        app:layout_constraintTop_toBottomOf="@+id/textViewAdditives"
        app:layout_constraintTop_toTopOf="@+id/checkBoxMilk"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxMilk"
        />

    <TextView
        android:id="@+id/textViewDrinkType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/textViewDrinkTypeChoose"
        android:textAlignment="center"
        android:textColor="#A227B0"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerCoffee"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxMilk"
        tools:layout_editor_absoluteX="16dp" />

    <Spinner
        android:id="@+id/spinnerTea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:entries="@array/types_of_tea"
        android:visibility="invisible"
        tools:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/buttonOrder"
        app:layout_constraintTop_toBottomOf="@+id/textViewDrinkType"
        />

    <Spinner
        android:id="@+id/spinnerCoffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:entries="@array/type_of_coffee"
        android:visibility="visible"
        tools:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/buttonOrder"
        app:layout_constraintTop_toBottomOf="@+id/textViewDrinkType" />

    <Button
        android:id="@+id/buttonOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonOrderText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCoffee"
        tools:layout_editor_absoluteX="50dp" />


</androidx.constraintlayout.widget.ConstraintLayout>

